# technology-risk-register

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CI_CD_SETUP.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  ENV_SETUP.md  README.md  TODO.md  alembic.ini  check_env.sh  cloudbuild.yaml  complete_seed_risks.py  deploy-frontend.sh  deploy.sh  docker-compose.yml  docker-entrypoint.sh  load_risks.py  pyproject.toml  risk_register.db  run_integration_tests.py  setup-gcp-service-account.sh  test_local_example.sh
.claude/commands/: test-api.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0f4ca05ae220_initial_migration.py  70cfbd2a804e_rename_riskupdate_to_risklogentry_with_.py  fb12645a9f51_complete_risk_model_recreation_business_.py
app/: main.py
app/api/: admin.py  api.py
app/api/endpoints/: chat.py  dashboard.py  dropdown.py  risks.py
app/api/routes/: auth.py
app/core/: config.py  database.py  security.py  seed_data.py  sync.py
app/models/: risk.py
app/risk_sme/: README.md  __init__.py  risk_sme_agent.py  risk_utils.py  test_queries.py
app/schemas/: chat.py  dashboard.py  risk.py
app/services/: cloud_storage.py  dashboard_service.py  dropdown_service.py  risk_service.py
frontend/: Dockerfile  Dockerfile.dev  README-frontend.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: RiskLogEntryForm.tsx  RiskLogTimeline.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  CodeViewer.tsx  RiskResultCard.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useAuth.ts  useDashboard.ts  useDropdownValues.ts  useRiskLogEntries.ts  useRisks.ts  useThemeMode.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/lib/: auth.ts
frontend/src/pages/: AddRisk.tsx  Dashboard.tsx  EditRisk.tsx  Login.tsx  RiskChat.tsx  RiskList.tsx  ViewRisk.tsx
frontend/src/services/: api.ts
frontend/src/types/: risk.ts  riskLogEntry.ts
frontend/src/utils/: validation.ts
terraform/: Makefile  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py  test_auth.py  test_chat_endpoint.py  test_dashboard_service.py  test_dropdown_endpoints.py  test_dropdown_service.py  test_main.py  test_risk_service.py  test_routes.py
tests/integration/: README.md  __init__.py  test_chat_integration.py  test_integration.py
