[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "technology-risk-register"
version = "0.1.0"
description = "Technology Risk Register Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "google-cloud-storage>=2.10.0",
    "httpx>=0.28.1",
    "mypy>=1.17.1",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.3.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "ruff>=0.12.12",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "anthropic>=0.69.0",
    "e2b-code-interpreter>=2.1.1",
    "openai>=2.3.0",
    "aisuite>=0.1.6",
    "ipython>=9.6.0",
    "pillow>=11.3.0",
    "pandas>=2.3.3",
    "tavily-python>=0.7.12",
    "duckdb>=1.4.1",
    "tinydb>=4.8.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # Do not perform function call in argument defaults (FastAPI Depends)
    "E501",  # Line too long (handled by Black)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "app/risk_sme/test_queries\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "app.risk_sme.risk_sme_agent",
    "app.core.sync",
    "app.core.security",
    "app.api.admin",
]
warn_return_any = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false

[dependency-groups]
test = [
    "httpx>=0.28.1",
    "requests>=2.28.0",
]
